supply-chain-security/imageverification/keyless/resource.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app
  namespace: dev
  labels:
    app: app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: python-app
        image: docker.io/anushah/sample-python-app:1.0
        ports:
        - containerPort: 80
