supply-chain-security/imageverification/keyless/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-image-keyless
spec:
  webhookConfiguration:
    timeoutSeconds: 30
  rules:
    - name: check-image-keyless
      match:
        any:
        - resources:
            kinds:
              - Pod
      verifyImages:
      - imageReferences:
        - "docker.io/anushah/*"
        failureAction: Enforce
        attestors:
        - entries:
          - keyless:
              subject: "*@nirmata.com"
              issuer: "https://accounts.google.com"
              rekor:
                url: https://rekor.sigstore.dev
